<?xml version="1.0"?>
<package format="2">
  <name>rviz_polygon_tool</name>
  <version>0.0.0</version>
  <description>
    RVIZ tool to create polygons.
  </description>

  <maintainer email="tobias.zaenker@aalto.fi">Tobias Zaenker</maintainer>

  <!-- Modifications for publishing geometry_msgs::PolygonStamped -->
  <author email="tobias.zaenker@aalto.fi">Tobias Zaenker</author>

  <!-- Original polygon publisher code -->
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="tmarvel@student.ethz.ch">Timothy Marvel</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
